@@ -207,16 +207,68 @@ class DateTimeExtCalculationsTest < Test::Unit::TestCase
     assert_match(/^2080-02-28T15:15:10-06:?00$/, DateTime.civil(2080, 2, 28, 15, 15, 10, -0.25).xmlschema)
   end
 
-  uses_mocha 'past?, today? and future?' do
-    def test_past_today_future
-      Date.stubs(:current).returns(Date.civil(2000, 1, 1))
-      DateTime.stubs(:current).returns(DateTime.civil(2000, 1, 1, 1, 0, 1))
-      t1, t2 = DateTime.civil(2000, 1, 1, 1, 0, 0), DateTime.civil(2000, 1, 1, 1, 0, 2)
+  uses_mocha 'Test DateTime past?, today? and future?' do    
+    def test_today_with_offset
+      Date.stubs(:current).returns(Date.new(2000, 1, 1))
+      assert_equal false, DateTime.civil(1999,12,31,23,59,59, Rational(-18000, 86400)).today?
+      assert_equal true,  DateTime.civil(2000,1,1,0,0,0, Rational(-18000, 86400)).today?
+      assert_equal true,  DateTime.civil(2000,1,1,23,59,59, Rational(-18000, 86400)).today?
+      assert_equal false, DateTime.civil(2000,1,2,0,0,0, Rational(-18000, 86400)).today?
+    end
+    
+    def test_today_without_offset
+      Date.stubs(:current).returns(Date.new(2000, 1, 1))
+      assert_equal false, DateTime.civil(1999,12,31,23,59,59).today?
+      assert_equal true,  DateTime.civil(2000,1,1,0).today?
+      assert_equal true,  DateTime.civil(2000,1,1,23,59,59).today?
+      assert_equal false, DateTime.civil(2000,1,2,0).today?
+    end
+    
+    def test_past_with_offset
+      DateTime.stubs(:current).returns(DateTime.civil(2005,2,10,15,30,45, Rational(-18000, 86400)))
+      assert_equal true,  DateTime.civil(2005,2,10,15,30,44, Rational(-18000, 86400)).past?
+      assert_equal false,  DateTime.civil(2005,2,10,15,30,45, Rational(-18000, 86400)).past?
+      assert_equal false,  DateTime.civil(2005,2,10,15,30,46, Rational(-18000, 86400)).past?
+    end
+    
+    def test_past_without_offset
+      DateTime.stubs(:current).returns(DateTime.civil(2005,2,10,15,30,45, Rational(-18000, 86400)))
+      assert_equal true,  DateTime.civil(2005,2,10,20,30,44).past?
+      assert_equal false,  DateTime.civil(2005,2,10,20,30,45).past?
+      assert_equal false,  DateTime.civil(2005,2,10,20,30,46).past?
+    end
+    
+    def test_future_with_offset
+      DateTime.stubs(:current).returns(DateTime.civil(2005,2,10,15,30,45, Rational(-18000, 86400)))
+      assert_equal false,  DateTime.civil(2005,2,10,15,30,44, Rational(-18000, 86400)).future?
+      assert_equal false,  DateTime.civil(2005,2,10,15,30,45, Rational(-18000, 86400)).future?
+      assert_equal true,  DateTime.civil(2005,2,10,15,30,46, Rational(-18000, 86400)).future?
+    end
+    
+    def test_future_without_offset
+      DateTime.stubs(:current).returns(DateTime.civil(2005,2,10,15,30,45, Rational(-18000, 86400)))
+      assert_equal false,  DateTime.civil(2005,2,10,20,30,44).future?
+      assert_equal false,  DateTime.civil(2005,2,10,20,30,45).future?
+      assert_equal true,  DateTime.civil(2005,2,10,20,30,46).future?
+    end
+  end
+  
+  uses_mocha 'TestDateTimeCurrent' do
+    def test_current_returns_date_today_when_zone_default_not_set
+      with_env_tz 'US/Eastern' do
+        Time.stubs(:now).returns Time.local(1999, 12, 31, 23, 59, 59)
+        assert_equal DateTime.new(1999, 12, 31, 23, 59, 59, Rational(-18000, 86400)), DateTime.current
+      end
+    end
 
-      assert t1.past?
-      assert t2.future?
-      assert t1.today?
-      assert t2.today?
+    def test_current_returns_time_zone_today_when_zone_default_set
+      Time.zone_default = ActiveSupport::TimeZone['Eastern Time (US & Canada)']
+      with_env_tz 'US/Eastern' do
+        Time.stubs(:now).returns Time.local(1999, 12, 31, 23, 59, 59)
+        assert_equal DateTime.new(1999, 12, 31, 23, 59, 59, Rational(-18000, 86400)), DateTime.current
+      end
+    ensure
+      Time.zone_default = nil
     end
   end
 
