@@ -1,5 +1,7 @@
 *Edge*
 
+* Added Time, Date, DateTime and TimeWithZone #past?, #future? and #today? #720 [Clemens Kofler, Geoff Buesing]
+
 * Fixed Sri Jayawardenepura time zone to map to Asia/Colombo [Jamis Buck]
 
 * Added Inflector#parameterize for easy slug generation ("Donald E. Knuth".parameterize => "donald-e-knuth") #713 [Matt Darby]
